--- a/first_0719.html
+++ b/first_0719.html
@@ -291,12 +291,13 @@
             </div>
           </div>
 
-          <!-- <div class="footer-wavveon">
-            <div class="footer-logo-wrapper">
-              <div class="wavveon-footer-logo">
+          <div class="footer-wavveon">
+         
+              < class="wavveon-footer-logo">
                 <label for="wavveon-logo">
                   <img src="asset/footer-logo.svg" alt="/" />
                 </label>
+
                 <select
                   id="wavveon-logo"
                   onchange="if(this.value) location.href=(this.value)"
@@ -324,9 +325,9 @@
                     <img src="asset/naverPost.png" alt="네이버포스트" />
                   </a>
                 </div>
-              </div>
+              
             </div>
-          </div> -->
+          </div>
         </div>
       </footer>
     </div>
