--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <section>
             <section>
               <div
-                class="multi portrait-cell"
+                class="contents portrait-cell"
                 style="background-color: rgb(27, 27, 27)"
               >
                 <div class="title">
