swiper, contents 이미지 작업 등

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <div>
           <section>
             <div id="main-banner" class="swiper-container banner">
+              <!-- swiper bottom button -->
               <div class="main01-nav">
                 <button type="button" class="btn-pause"></button>
                 <div class="swiper-pagination swiper-pagination-bullets">
@@ -81,6 +82,8 @@
                   <span class="swiper-pagination-bullet"></span>
                 </div>
               </div>
+              <!--  -->
+              <!-- swiper arrow button -->
               <button
                 type="button"
                 class="swiper-button-prev"
@@ -91,21 +94,55 @@
                 class="swiper-button-next"
                 tabindex="0"
               ></button>
-              <div
-                class="swiper-wrapper"
-                style="
-                  transform: translate3d(-9916px, 0px, 0px);
-                  transition-duration: 0ms;
-                "
-              >
-                <div class="swiper-slide component-list swiper-slide-duplicate">
-                  <div class="picture-area">
-                    <picture> </picture>
-                  </div>
+              <!--  -->
+
+              <!-- swiper -->
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img src="asset/transformer.png" alt="/" />
                 </div>
+                <div class="swiper-slide">
+                  <img src="asset/transformer.png" alt="/" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="asset/transformer.png" alt="/" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="asset/transformer.png" alt="/" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="asset/transformer.png" alt="/" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="asset/transformer.png" alt="/" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="asset/transformer.png" alt="/" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="asset/transformer.png" alt="/" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="asset/transformer.png" alt="/" />
+                </div>
+                <!-- <div class="swiper-slide component-list swiper-slide-duplicate">
+                  <div class="picture-area">
+                    <div
+                      class="picture"
+                      style="background-image: url('asset/transformer.png')"
+                    ></div>
+                    <div class="picture"></div>
+                    <div class="picture"></div>
+                    <div class="picture"></div>
+                    <div class="picture"></div>
+                  </div>
+                </div> -->
               </div>
+              <!--  -->
             </div>
           </section>
+
+          <!-- main section contents -->
           <section>
             <section>
               <div
@@ -133,7 +170,12 @@
                                 <span class="alt-text">남의연애</span>
                               </div>
                               <div class="picture-area">
-                                <picture> </picture>
+                                <picture>
+                                  <img
+                                    src="asset/content01.webp"
+                                    alt="곽준빈기사식당"
+                                  />
+                                </picture>
                               </div>
                             </div>
                           </a>
@@ -151,7 +193,12 @@
                                 <span class="alt-text">남의연애</span>
                               </div>
                               <div class="picture-area">
-                                <picture> </picture>
+                                <picture>
+                                  <img
+                                    src="asset/contents02.webp"
+                                    alt="남의연애"
+                                  />
+                                </picture>
                               </div>
                             </div>
                           </a>
@@ -169,7 +216,12 @@
                                 <span class="alt-text">남의연애</span>
                               </div>
                               <div class="picture-area">
-                                <picture> </picture>
+                                <picture>
+                                  <img
+                                    src="asset/content03.webp"
+                                    alt="데드드리프트"
+                                  />
+                                </picture>
                               </div>
                             </div>
                           </a>
@@ -187,7 +239,9 @@
                                 <span class="alt-text">남의연애</span>
                               </div>
                               <div class="picture-area">
-                                <picture> </picture>
+                                <picture>
+                                  <img src="/asset/content04.webp" alt="/" />
+                                </picture>
                               </div>
                             </div>
                           </a>
@@ -205,7 +259,12 @@
                                 <span class="alt-text">남의연애</span>
                               </div>
                               <div class="picture-area">
-                                <picture> </picture>
+                                <picture>
+                                  <img
+                                    src="asset/content05.webp"
+                                    alt="하트시그널"
+                                  />
+                                </picture>
                               </div>
                             </div>
                           </a>
@@ -214,9 +273,11 @@
                     </div>
                   </div>
                 </div>
+                <a href="/" class="btn-more all">더보기</a>
               </div>
             </section>
           </section>
+          <!-- main section contents end -->
         </div>
       </main>
 
@@ -273,21 +334,16 @@
               </ul>
             </div>
             <div class="footer-info-area footer-info-copyright">
-              <span>콘텐츠웨이브 주식회사</span>
-              <span>대표이사 이태현</span>
+              <span>gazero웨이브 주식회사</span>
+              <span>대표이사 gazero</span>
+              <span class="last">고객센터 0000-0000 (연중무휴)</span>
+              <br />
+              <span>사업자등록번호 000-00-0000</span>
               <span class="last"
-                >고객센터 1599-3709 (평일 09:00~18:00 / 점심시간 12:00~13:00 /
-                주말 및 공휴일 휴무)</span
+                >호스팅서비스제공자 : 바로 나, 또한 나, 픽미픽미</span
               >
               <br />
-              <span>사업자등록번호 220-88-38020</span>
-              <span class="last"
-                >호스팅서비스제공자 : 마이크로소프트 유한회사,
-                구글클라우드코리아 유한회사, 아마존웹서비시즈코리아
-                유한회사</span
-              >
-              <br />
-              <span>통신판매업 신고번호 : 제 2021-서울영등포-0585호</span>
+              <span>통신판매업 신고번호 : 호호호</span>
             </div>
           </div>
 
@@ -330,4 +386,5 @@
       </footer>
     </div>
   </div>
+  <!-- <script src="app.js"></script> -->
 </body>
