--- a/index.html
+++ b/index.html
@@ -142,7 +142,144 @@
             </div>
           </section>
 
-          <!-- main section contents -->
+          <!-- 1. main section contents -->
+          <section>
+            <section>
+              <div
+                class="contents portrait-cell"
+                style="background-color: rgb(27, 27, 27)"
+              >
+                <div class="title">
+                  <h1 class="title-area">
+                    <span class="label">믿고 보는 웨이브 에디터 추천작</span>
+                  </h1>
+                </div>
+                <div>
+                  <div
+                    class="swiper-container swiper portrait-cell swiper-container-horizontal"
+                  >
+                    <div class="swiper-wrapper">
+                      <div
+                        class="swiper-slide"
+                        style="width: 240px; margin-right: 10px"
+                      >
+                        <div class="thumb portrait">
+                          <a href="/">
+                            <div class="thumb-image">
+                              <div class="no-thumb" style="display: none">
+                                <span class="alt-text">남의연애</span>
+                              </div>
+                              <div class="picture-area">
+                                <picture>
+                                  <img
+                                    src="asset/content01.webp"
+                                    alt="곽준빈기사식당"
+                                  />
+                                </picture>
+                              </div>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div
+                        class="swiper-slide"
+                        style="width: 240px; margin-right: 10px"
+                      >
+                        <div class="thumb portrait">
+                          <a href="/">
+                            <div class="thumb-image">
+                              <div class="no-thumb" style="display: none">
+                                <span class="alt-text">남의연애</span>
+                              </div>
+                              <div class="picture-area">
+                                <picture>
+                                  <img
+                                    src="asset/contents02.webp"
+                                    alt="남의연애"
+                                  />
+                                </picture>
+                              </div>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div
+                        class="swiper-slide"
+                        style="width: 240px; margin-right: 10px"
+                      >
+                        <div class="thumb portrait">
+                          <a href="/">
+                            <div class="thumb-image">
+                              <div class="no-thumb" style="display: none">
+                                <span class="alt-text">남의연애</span>
+                              </div>
+                              <div class="picture-area">
+                                <picture>
+                                  <img
+                                    src="asset/content03.webp"
+                                    alt="데드드리프트"
+                                  />
+                                </picture>
+                              </div>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div
+                        class="swiper-slide"
+                        style="width: 240px; margin-right: 10px"
+                      >
+                        <div class="thumb portrait">
+                          <a href="/">
+                            <div class="thumb-image">
+                              <div class="no-thumb" style="display: none">
+                                <span class="alt-text">남의연애</span>
+                              </div>
+                              <div class="picture-area">
+                                <picture>
+                                  <img src="/asset/content04.webp" alt="/" />
+                                </picture>
+                              </div>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div
+                        class="swiper-slide"
+                        style="width: 240px; margin-right: 10px"
+                      >
+                        <div class="thumb portrait">
+                          <a href="/">
+                            <div class="thumb-image">
+                              <div class="no-thumb" style="display: none">
+                                <span class="alt-text">남의연애</span>
+                              </div>
+                              <div class="picture-area">
+                                <picture>
+                                  <img
+                                    src="asset/content05.webp"
+                                    alt="하트시그널"
+                                  />
+                                </picture>
+                              </div>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <a href="/" class="btn-more all">더보기</a>
+              </div>
+            </section>
+          </section>
+          <!-- main section contents end -->
+
+          <!-- 1. main section contents -->
           <section>
             <section>
               <div
@@ -386,5 +523,5 @@
       </footer>
     </div>
   </div>
-  <!-- <script src="app.js"></script> -->
+  <script src="app.js"></script>
 </body>
