--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
               <!-- swiper bottom button -->
               <div class="main01-nav">
                 <button type="button" class="btn-pause"></button>
+                <!-- <button type="button" aria-label="재생" class="btn-play ir">
+                 
+                </button> -->
                 <div class="swiper-pagination swiper-pagination-bullets">
                   <span class="swiper-pagination-bullet"></span>
                   <span class="swiper-pagination-bullet"></span>
@@ -97,46 +100,25 @@
               <!--  -->
 
               <!-- swiper -->
-              <div class="swiper-wrapper">
+              <div class="swiper-wrapper-banner">
                 <div class="swiper-slide">
-                  <img src="asset/transformer.png" alt="/" />
+                  <img src="asset/transfer0.webp" alt="/" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="asset/transformer.png" alt="/" />
+                  <img src="asset/transfer1.webp" alt="/" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="asset/transformer.png" alt="/" />
+                  <img src="asset/transfer2.webp" alt="/" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="asset/transformer.png" alt="/" />
+                  <img src="asset/transfer3.webp" alt="/" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="asset/transformer.png" alt="/" />
+                  <img src="asset/transfer4.webp" alt="/" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="asset/transformer.png" alt="/" />
+                  <img src="asset/transfer5.webp" alt="/" />
                 </div>
-                <div class="swiper-slide">
-                  <img src="asset/transformer.png" alt="/" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="asset/transformer.png" alt="/" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="asset/transformer.png" alt="/" />
-                </div>
-                <!-- <div class="swiper-slide component-list swiper-slide-duplicate">
-                  <div class="picture-area">
-                    <div
-                      class="picture"
-                      style="background-image: url('asset/transformer.png')"
-                    ></div>
-                    <div class="picture"></div>
-                    <div class="picture"></div>
-                    <div class="picture"></div>
-                    <div class="picture"></div>
-                  </div>
-                </div> -->
               </div>
               <!--  -->
             </div>
