second slide js working

--- a/index.html
+++ b/index.html
@@ -252,9 +252,160 @@
                           </a>
                         </div>
                       </div>
+
+                      <!-- 가짜 -->
+                      <div
+                        class="swiper-slide"
+                        style="width: 240px; margin-right: 10px"
+                      >
+                        <div class="thumb portrait">
+                          <a href="/">
+                            <div class="thumb-image">
+                              <div class="no-thumb" style="display: none">
+                                <span class="alt-text">남의연애</span>
+                              </div>
+                              <div class="picture-area">
+                                <picture>
+                                  <img
+                                    src="asset/content03.webp"
+                                    alt="데드드리프트"
+                                  />
+                                </picture>
+                              </div>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div
+                        class="swiper-slide"
+                        style="width: 240px; margin-right: 10px"
+                      >
+                        <div class="thumb portrait">
+                          <a href="/">
+                            <div class="thumb-image">
+                              <div class="no-thumb" style="display: none">
+                                <span class="alt-text">남의연애</span>
+                              </div>
+                              <div class="picture-area">
+                                <picture>
+                                  <img
+                                    src="asset/content03.webp"
+                                    alt="데드드리프트"
+                                  />
+                                </picture>
+                              </div>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div
+                        class="swiper-slide"
+                        style="width: 240px; margin-right: 10px"
+                      >
+                        <div class="thumb portrait">
+                          <a href="/">
+                            <div class="thumb-image">
+                              <div class="no-thumb" style="display: none">
+                                <span class="alt-text">남의연애</span>
+                              </div>
+                              <div class="picture-area">
+                                <picture>
+                                  <img
+                                    src="asset/content03.webp"
+                                    alt="데드드리프트"
+                                  />
+                                </picture>
+                              </div>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div
+                        class="swiper-slide"
+                        style="width: 240px; margin-right: 10px"
+                      >
+                        <div class="thumb portrait">
+                          <a href="/">
+                            <div class="thumb-image">
+                              <div class="no-thumb" style="display: none">
+                                <span class="alt-text">남의연애</span>
+                              </div>
+                              <div class="picture-area">
+                                <picture>
+                                  <img
+                                    src="asset/content03.webp"
+                                    alt="데드드리프트"
+                                  />
+                                </picture>
+                              </div>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div
+                        class="swiper-slide"
+                        style="width: 240px; margin-right: 10px"
+                      >
+                        <div class="thumb portrait">
+                          <a href="/">
+                            <div class="thumb-image">
+                              <div class="no-thumb" style="display: none">
+                                <span class="alt-text">남의연애</span>
+                              </div>
+                              <div class="picture-area">
+                                <picture>
+                                  <img
+                                    src="asset/content03.webp"
+                                    alt="데드드리프트"
+                                  />
+                                </picture>
+                              </div>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+
+                      <div
+                        class="swiper-slide"
+                        style="width: 240px; margin-right: 10px"
+                      >
+                        <div class="thumb portrait">
+                          <a href="/">
+                            <div class="thumb-image">
+                              <div class="no-thumb" style="display: none">
+                                <span class="alt-text">남의연애</span>
+                              </div>
+                              <div class="picture-area">
+                                <picture>
+                                  <img
+                                    src="asset/content03.webp"
+                                    alt="데드드리프트"
+                                  />
+                                </picture>
+                              </div>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+
+                      <!-- 가짜끝 -->
                     </div>
                   </div>
                 </div>
+                <button
+                  type="button"
+                  class="second-button-prev"
+                  tabindex="0"
+                ></button>
+                <button
+                  type="button"
+                  class="second-button-next"
+                  tabindex="0"
+                ></button>
                 <a href="/" class="btn-more all">더보기</a>
               </div>
             </section>
@@ -508,4 +659,5 @@
     </div>
   </div>
   <script src="js/slider_init.js"></script>
+  <script src="js/slider_second.js"></script>
 </body>
