오류해결  리드미

--- a/index.html
+++ b/index.html
@@ -659,5 +659,5 @@
     </div>
   </div>
   <script src="js/slider_init.js"></script>
-  <script src="js/slider_second.js"></script>
+  <script src="js/slider-second.js"></script>
 </body>
